--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
         <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
-
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/styles.css" />
         <title>PWA Weather</title>
     </head>
     <body>
@@ -15,5 +12,14 @@
             <div id="react-target"></div>
         </div>        
         <script type="text/javascript" src="js/bundle.js"></script>
+        <script>
+            // Check that service workers are registered
+            if ('serviceWorker' in navigator) {
+                // Use the window load event to keep the page load performant
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/service-worker.js');
+                });
+            }
+        </script>
     </body>
 </html>
