--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <title>PWA Weather</title>
+        <link rel="manifest" href="/manifest.json">
     </head>
     <body>
         <div class="container-fluid">
